docs/api/qiskit/0.24/qiskit.chemistry.drivers.FermionicDriver.mdx
---
title: FermionicDriver
description: API reference for qiskit.chemistry.drivers.FermionicDriver
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.drivers.FermionicDriver
---

<span id="qiskit-chemistry-drivers-fermionicdriver" />

# qiskit.chemistry.drivers.FermionicDriver

<Class id="qiskit.chemistry.drivers.FermionicDriver" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/chemistry/drivers/fermionic_driver.py" signature="FermionicDriver(molecule=None, basis='sto3g', hf_method='rhf', supports_molecule=False)">
  Base class for Qiskit’s chemistry fermionic drivers.

  **Parameters**

  *   **molecule** (`Optional`\[`Molecule`]) – molecule
  *   **basis** (`str`) – basis set
  *   **hf\_method** (`str`) – Hartree-Fock Method type
  *   **supports\_molecule** (`bool`) – Indicates if driver supports molecule

  **Raises**

  [**QiskitChemistryError**](qiskit.chemistry.QiskitChemistryError "qiskit.chemistry.QiskitChemistryError") – Molecule passed but driver doesn’t support it.

  ### \_\_init\_\_

  <Function id="qiskit.chemistry.drivers.FermionicDriver.__init__" name="__init__" signature="abstract __init__(molecule=None, basis='sto3g', hf_method='rhf', supports_molecule=False)">
    **Parameters**

    *   **molecule** (`Optional`\[`Molecule`]) – molecule
    *   **basis** (`str`) – basis set
    *   **hf\_method** (`str`) – Hartree-Fock Method type
    *   **supports\_molecule** (`bool`) – Indicates if driver supports molecule

    **Raises**

    [**QiskitChemistryError**](qiskit.chemistry.QiskitChemistryError "qiskit.chemistry.QiskitChemistryError") – Molecule passed but driver doesn’t support it.
  </Function>

  ## Methods

  |                                                                                                                                                         |                                            |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
  | [`__init__`](#qiskit.chemistry.drivers.FermionicDriver.__init__ "qiskit.chemistry.drivers.FermionicDriver.__init__")(\[molecule, basis, hf\_method, …]) | **type molecule**`Optional`\[`Molecule`]   |
  | [`run`](#qiskit.chemistry.drivers.FermionicDriver.run "qiskit.chemistry.drivers.FermionicDriver.run")()                                                 | Runs driver to produce a QMolecule output. |

  ## Attributes

  |                                                                                                                                                 |                                                 |
  | ----------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
  | [`basis`](#qiskit.chemistry.drivers.FermionicDriver.basis "qiskit.chemistry.drivers.FermionicDriver.basis")                                     | return basis                                    |
  | [`hf_method`](#qiskit.chemistry.drivers.FermionicDriver.hf_method "qiskit.chemistry.drivers.FermionicDriver.hf_method")                         | return Hartree-Fock method                      |
  | [`molecule`](#qiskit.chemistry.drivers.FermionicDriver.molecule "qiskit.chemistry.drivers.FermionicDriver.molecule")                            | return molecule                                 |
  | [`supports_molecule`](#qiskit.chemistry.drivers.FermionicDriver.supports_molecule "qiskit.chemistry.drivers.FermionicDriver.supports_molecule") | True for derived classes that support Molecule. |

  ### basis

  <Function id="qiskit.chemistry.drivers.FermionicDriver.basis" name="basis" signature="property basis">
    return basis

    **Return type**

    `str`
  </Function>

  ### hf\_method

  <Function id="qiskit.chemistry.drivers.FermionicDriver.hf_method" name="hf_method" signature="property hf_method">
    return Hartree-Fock method

    **Return type**

    `str`
  </Function>

  ### molecule

  <Function id="qiskit.chemistry.drivers.FermionicDriver.molecule" name="molecule" signature="property molecule">
    return molecule

    **Return type**

    `Optional`\[`Molecule`]
  </Function>

  ### run

  <Function id="qiskit.chemistry.drivers.FermionicDriver.run" name="run" signature="abstract run()">
    Runs driver to produce a QMolecule output.

    **Return type**

    `QMolecule`

    **Returns**

    A QMolecule containing the molecular data.
  </Function>

  ### supports\_molecule

  <Function id="qiskit.chemistry.drivers.FermionicDriver.supports_molecule" name="supports_molecule" signature="property supports_molecule">
    True for derived classes that support Molecule.

    **Return type**

    `bool`

    **Returns**

    True if Molecule is supported.
  </Function>
</Class>

