docs/api/qiskit/0.25/qiskit.chemistry.drivers.FermionicDriver.mdx
---
title: FermionicDriver
description: API reference for qiskit.chemistry.drivers.FermionicDriver
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.drivers.FermionicDriver
---

# qiskit.chemistry.drivers.FermionicDriver

<Class id="qiskit.chemistry.drivers.FermionicDriver" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/drivers/fermionic_driver.py" signature="FermionicDriver(molecule=None, basis='sto3g', hf_method='rhf', supports_molecule=False)" modifiers="class">
  Base class for Qiskit’s chemistry fermionic drivers.

  **Parameters**

  *   **molecule** (`Optional`\[`Molecule`]) – molecule
  *   **basis** (`str`) – basis set
  *   **hf\_method** (`str`) – Hartree-Fock Method type
  *   **supports\_molecule** (`bool`) – Indicates if driver supports molecule

  **Raises**

  [**QiskitChemistryError**](qiskit.chemistry.QiskitChemistryError "qiskit.chemistry.QiskitChemistryError") – Molecule passed but driver doesn’t support it.

  ### \_\_init\_\_

  <Function id="qiskit.chemistry.drivers.FermionicDriver.__init__" signature="__init__(molecule=None, basis='sto3g', hf_method='rhf', supports_molecule=False)" modifiers="abstract">
    **Parameters**

    *   **molecule** (`Optional`\[`Molecule`]) – molecule
    *   **basis** (`str`) – basis set
    *   **hf\_method** (`str`) – Hartree-Fock Method type
    *   **supports\_molecule** (`bool`) – Indicates if driver supports molecule

    **Raises**

    [**QiskitChemistryError**](qiskit.chemistry.QiskitChemistryError "qiskit.chemistry.QiskitChemistryError") – Molecule passed but driver doesn’t support it.
  </Function>

  ## Methods

  |                                                                                                                                                         |                                            |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
  | [`__init__`](#qiskit.chemistry.drivers.FermionicDriver.__init__ "qiskit.chemistry.drivers.FermionicDriver.__init__")(\[molecule, basis, hf\_method, …]) | **type molecule**`Optional`\[`Molecule`]   |
  | [`run`](#qiskit.chemistry.drivers.FermionicDriver.run "qiskit.chemistry.drivers.FermionicDriver.run")()                                                 | Runs driver to produce a QMolecule output. |

  ## Attributes

  |                                                                                                                                                 |                                                 |
  | ----------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
  | [`basis`](#qiskit.chemistry.drivers.FermionicDriver.basis "qiskit.chemistry.drivers.FermionicDriver.basis")                                     | return basis                                    |
  | [`hf_method`](#qiskit.chemistry.drivers.FermionicDriver.hf_method "qiskit.chemistry.drivers.FermionicDriver.hf_method")                         | return Hartree-Fock method                      |
  | [`molecule`](#qiskit.chemistry.drivers.FermionicDriver.molecule "qiskit.chemistry.drivers.FermionicDriver.molecule")                            | return molecule                                 |
  | [`supports_molecule`](#qiskit.chemistry.drivers.FermionicDriver.supports_molecule "qiskit.chemistry.drivers.FermionicDriver.supports_molecule") | True for derived classes that support Molecule. |

  ### basis

  <Function id="qiskit.chemistry.drivers.FermionicDriver.basis" signature="basis" modifiers="property">
    return basis

    **Return type**

    `str`
  </Function>

  ### hf\_method

  <Function id="qiskit.chemistry.drivers.FermionicDriver.hf_method" signature="hf_method" modifiers="property">
    return Hartree-Fock method

    **Return type**

    `str`
  </Function>

  ### molecule

  <Function id="qiskit.chemistry.drivers.FermionicDriver.molecule" signature="molecule" modifiers="property">
    return molecule

    **Return type**

    `Optional`\[`Molecule`]
  </Function>

  ### run

  <Function id="qiskit.chemistry.drivers.FermionicDriver.run" signature="run()" modifiers="abstract">
    Runs driver to produce a QMolecule output.

    **Return type**

    `QMolecule`

    **Returns**

    A QMolecule containing the molecular data.
  </Function>

  ### supports\_molecule

  <Function id="qiskit.chemistry.drivers.FermionicDriver.supports_molecule" signature="supports_molecule" modifiers="property">
    True for derived classes that support Molecule.

    **Return type**

    `bool`

    **Returns**

    True if Molecule is supported.
  </Function>
</Class>

